New: Add game switch for multiple scores
Closes #12.

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -64,6 +64,10 @@
         "description": "The name of the button to export results."
     },
 
+    "statsShow": {
+        "message": "Anzeige",
+        "description": "The name of the statistics label."
+    },
     "best_short": {
         "message": "best",
         "description": "The short name of the stat label for: best."
