--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -39,12 +39,33 @@
         "description": "This hint tells about the spacebar as a short key to start/stop the timer."
     },
     "scrambleLabel": {
-        "message": "Scramble:",
+        "message": "Scramble: $1",
         "description": "The label indicating how to scramble the cube before solving it."
     },
+    "scrambleLabelNone": {
+        "message": "No scramble available",
+        "description": "The label indicating that no scramble is available."
+    },
+
     "results": {
         "message": "Times",
         "description": "The label of the results/times panel."
+    },
+    "date": {
+        "message": "Date",
+        "description": "The date of the result."
+    },
+    "score": {
+        "message": "Score",
+        "description": "The score of the result."
+    },
+    "tags": {
+        "message": "Tags",
+        "description": "The tags of the result."
+    },
+    "actions": {
+        "message": "Actions",
+        "description": "The actions that may be applied to the result."
     },
 
     "buttonStart": {
