Fix: Re-enable navbar game changing
Navbar has been moved to the left side for all screen widths. Cloning and adapting the game-list is not needed any longer.

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -30,7 +30,11 @@
         }
     },
 
-    "configuration": {
+    "timer": {
+        "message": "Stoppuhr",
+        "description": "The name of the link that opens the main view."
+    },
+    "config": {
         "message": "Konfiguration",
         "description": "The name of the link that opens the configuration dialog."
     },
