--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -30,7 +30,11 @@
         }
     },
 
-    "configuration": {
+    "timer": {
+        "message": "Timer",
+        "description": "The name of the link that opens the main view."
+    },
+    "config": {
         "message": "Configuration",
         "description": "The name of the link that opens the configuration dialog."
     },
