--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -35,7 +35,7 @@
         "description": "The name of the link that opens the main view."
     },
     "config": {
-        "message": "Configuration",
+        "message": "Settings",
         "description": "The name of the link that opens the configuration dialog."
     },
     "hintSpacebar": {
@@ -87,6 +87,10 @@
     "buttonExport": {
         "message": "Export",
         "description": "The name of the button to export results."
+    },
+    "exportHeader": {
+        "message": "Export Results",
+        "description": "The header of the export dialog."
     },
 
     "inspectionTime": {
@@ -311,5 +315,18 @@
     "achievement_better_than": {
         "message": "Better than $1% of previous results.",
         "description": "The achievement message for better than X% of previous results."
+    },
+
+    "today": {
+        "message": "Today",
+        "description": "Today."
+    },
+    "yesterday": {
+        "message": "Yesterday",
+        "description": "Yesterday."
+    },
+    "thisWeek": {
+        "message": "This week",
+        "description": "This week."
     }
 }
