--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -328,5 +328,10 @@
     "thisWeek": {
         "message": "This week",
         "description": "This week."
+    },
+
+    "firebase_migration_finished": {
+        "message": "Your existing scores have been synched with the cloud.",
+        "description": "The message when migration has finished uploading it to Firebase."
     }
 }
