--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -85,11 +85,11 @@
         "description": "The name of the button to import results."
     },
     "buttonExport": {
-        "message": "Exportieren",
+        "message": "Exportieren des ausgewählten Puzzles",
         "description": "The name of the button to export results."
     },
     "exportHeader": {
-        "message": "Export Results",
+        "message": "Exportiere Ergebnisse des ausgewählten Puzzles",
         "description": "The header of the export dialog."
     },
 
