--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -330,6 +330,11 @@
         "description": "This week."
     },
 
+    "authSignOut": {
+        "message": "Sign out",
+        "description": "Sign out link label"
+    },
+
     "firebase_migration_finished": {
         "message": "Your existing scores have been synched with the cloud.",
         "description": "The message when migration has finished uploading it to Firebase."
