New: Show latest activity in puzzle list
Additionally, disable removing active puzzle. Allow puzzle selection on
puzzles page.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -351,6 +351,10 @@
         "message": "Your existing scores have been synched with the cloud.",
         "description": "The message when migration has finished uploading it to Firebase."
     },
+    "lastActive": {
+        "message": "Last active",
+        "description": "Last activity."
+    },
     "puzzleCreate": {
         "message": "Create Puzzle",
         "description": "The link to create a new puzzle."
