--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -351,6 +351,10 @@
         "message": "Deine bisherigen Ergebnisse wurden mit der Cloud synchronisiert.",
         "description": "The message when migration has finished uploading it to Firebase."
     },
+    "lastActive": {
+        "message": "Zuletzt aktiv",
+        "description": "Last activity."
+    },
     "puzzleCreate": {
         "message": "Neues Puzzle",
         "description": "The link to create a new puzzle."
