--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -219,35 +219,35 @@
         "description": "The short name of the stat label for: average."
     },
     "average5": {
-        "message": "Average #5",
+        "message": "Ao5",
         "description": "The name of the stat label for: average5."
     },
     "average5_short": {
-        "message": "avg 5",
+        "message": "ao5",
         "description": "The short name of the stat label for: average5."
     },
     "average12": {
-        "message": "Average #12",
+        "message": "Ao12",
         "description": "The name of the stat label for: average12."
     },
     "average12_short": {
-        "message": "avg 12",
+        "message": "ao12",
         "description": "The short name of the stat label for: average12."
     },
     "average25": {
-        "message": "Average #25",
+        "message": "Ao25",
         "description": "The short name of the stat label for: average25."
     },
     "average25_short": {
-        "message": "avg 25",
+        "message": "ao25",
         "description": "The name of the stat label for: average25."
     },
     "average50": {
-        "message": "Average #50",
+        "message": "Ao50",
         "description": "The short name of the stat label for: average50."
     },
     "average50_short": {
-        "message": "avg 50",
+        "message": "ao50",
         "description": "The name of the stat label for: average50."
     },
     "average80_short": {
