--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -254,6 +254,10 @@
         "message": "avg 80%",
         "description": "The short name of the stat label for: average80."
     },
+    "average": {
+        "message": "Avg",
+        "description": "The short name of the stat label for: average."
+    },
     "average3of5_short": {
         "message": "avg 3/5",
         "description": "The short name of the stat label for: average3of5."
